# routes/categoryRoutes.js
@@ -114,7 +114,7 @@ categoryRouter.patch(
         throw new Error("Cannot disable category with products");
       }
       else {
-        category.isDisabled = true;
+        category.isDisabled = req.body.isDisabled;
         await category.save();
         res.status(200);
         res.json({ message: "Category has been disabled" });
@@ -134,16 +134,12 @@ categoryRouter.patch(
     if (!category) {
       res.status(404);
       throw new Error("Category not found");
+    } else {
+      category.isDisabled = req.body.isDisabled;
+      const updateCategory = await category.save();
+      res.status(200);
+      res.json(updateCategory);
     }
-    const duplicatedCategory = await Category.findOne({ name: category.name, isDisabled: false });
-    if (duplicatedCategory) {
-      res.status(400);
-      throw new Error("Restore this category will result in duplicated category name");
-    }
-    category.isDisabled = false;
-    const updateCategory = await category.save();
-    res.status(200);
-    res.json(updateCategory);
   })
 );
 
@@ -157,15 +153,18 @@ categoryRouter.delete(
     if (!category) {
       res.status(404);
       throw new Error("Category not found");
-    } 
-    const product = await Product.findOne({ category: category._id });
-    if (product) {
-      res.status(400);
-      throw new Error("Cannot disable category with products");
+    } else {
+      const product = await Product.findOne({ category: category._id });
+      if (product) {
+        res.status(400);
+        throw new Error("Cannot disable category with products");
+      }
+      else {
+        await category.remove();
+        res.status(200);
+        res.json({ message: "Category has been deleted"});
+      }
     }
-    await category.remove();
-    res.status(200);
-    res.json({ message: "Category has been deleted"});
   })
 );
 
