# routes/userRoutes.js
@@ -6,12 +6,10 @@ import resize from "./../utils/resizeImage.js";
 import User from "../models/UserModel.js";
 import Order from "../models/OrderModel.js";
 import Cart from "../models/CartModel.js";
-import Comment from "../models/CommentModel.js";
 import { upload } from "./../middleware/UploadMiddleware.js";
 import path from "path";
 import fs from "fs";
 import mongoose from "mongoose";
-import Product from "../models/ProductModel.js";
 const __dirname = path.resolve();
 
 const userRouter = express.Router();
@@ -99,7 +97,7 @@ userRouter.get(
   "/profile",
   protect,
   expressAsyncHandler(async (req, res) => {
-    const userId = req.user._id ? req.user._id : null;
+    const userId = req.user.id ? req.user.id : null;
     const user = await User.findOne({ _id: userId, isDisabled: false });
     if (user) {
       res.json({
@@ -123,7 +121,7 @@ userRouter.get(
  * SWAGGER SETUP: no
  */
 userRouter.put("/profile", protect, async (req, res) => {
-  const userId = req.user._id ? req.user._id : null;
+  const userId = req.user.id ? req.user.id : null;
   const user = await User.findOne({ _id: userId, isDisabled: false });
   if (user) {
     user.name = req.body.name || user.name;
@@ -189,7 +187,7 @@ userRouter.post(
   protect,
   upload.single("file"),
   expressAsyncHandler(async (req, res) => {
-    const userId = req.user._id ? req.user._id : null;
+    const userId = req.user.id ? req.user.id : null;
     const user = await User.findOne({ _id: userId, isDisabled: false });
     if (user.isAdmin && req.params.userId) {
       user = await User.findById(req.params.userId);
@@ -239,23 +237,23 @@ userRouter.patch(
   protect,
   admin,
   expressAsyncHandler(async (req, res) => {
-    const userId = req.params.id ? req.params.id : null;
-    const user = await User.findOne({ _id: userId, isDisabled: false });
+    const user = await User.findById(req.params.id);
     if (!user) {
       res.status(404);
       throw new Error("User not found");
+    } else {
+      const order = await Order.findOne({ user: user._id, isDisabled: false });
+      if (order) {
+        res.status(400);
+        throw new Error("Cannot disable user who had ordered");
+      }
+      else {
+        user.isDisabled = req.body.isDisabled;
+        await user.save();
+        res.status(200);
+        res.json({ message: "User has been disabled" });
+      }
     }
-    const order = await Order.findOne({ user: user._id, isDisabled: false });
-    if (order) {
-      res.status(400);
-      throw new Error("Cannot disable user who had ordered");
-    }
-    user.isDisabled = true;
-    const disabledUser = await user.save();
-    //disable comments
-    await Comment.updateMany({ user: disabledUser }, { isDisabled: true });
-    res.status(200);
-    res.json({ message: "User has been disabled" });
   })
 );
 
@@ -266,29 +264,16 @@ userRouter.patch(
   admin,
   expressAsyncHandler(async (req, res) => {
     const userId = req.params.id ? req.params.id : null;
-    const user = await User.findOne({ _id: userId, isDisabled: true });
+    const user = await Order.findOne({ _id: userId, isDisabled: true }).select({ cart: 0 });
     if (!user) {
       res.status(404);
       throw new Error("User not found");
+    } else {
+      user.isDisabled = req.body.isDisabled;
+      const updateUser = await user.save();
+      res.status(200);
+      res.json(updateUser);
     }
-    const duplicatedUser = await User.findOne({ name: user.name, isDisabled: false });
-    if (duplicatedUser) {
-      res.status(400);
-      throw new Error("Restore this user will result in duplicated user name");
-    }
-    user.isDisabled = false;
-    const restoredUser = await user.save();
-    //restore comments
-    const userComments = await Comment.find({ user: restoredUser._id, isDisabled: true });
-    for (const comment of userComments) {
-      const linkedProduct = await Product.findById(comment.product);
-      if (linkedProduct.isDisabled == false) {
-        comment.isDisabled = false;
-        comment.save();
-      }
-    }
-    res.status(200);
-    res.json(restoredUser);
   })
 );
 
@@ -322,14 +307,11 @@ userRouter.delete(
             await session.abortTransaction();
             throw new Error("Something wrong while deleting user");
           }
-          //delete cart
           const deletedCart = await Cart.findOneAndDelete({ user: deletedUser._id }).session(session);
           if (!deletedCart) {
             await session.abortTransaction();
             throw new Error("Something wrong while deleting user cart");
           }
-          //delete comments
-          const deletedComments = await Comment.deleteMany({ user: deletedUser._id }).session(session);
           res.status(200);
           res.json({ message: "User has been deleted"});
         }, transactionOptions);
@@ -341,6 +323,10 @@ userRouter.delete(
         await session.endSession(); 
       }
   })
+);
+
+userRouter.post(
+  "/:id/"
 );
 
 export default userRouter;
