# server.js
@@ -15,8 +15,6 @@ import userRouter from "./routes/userRoutes.js";
 import categoryRouter from "./routes/categoryRoutes.js";
 import producerRouter from "./routes/producerRoutes.js";
 import cartRouter from "./routes/cartRoutes.js";
-import commentRouter from "./routes/commentRoutes.js";
-
 // import swaggerJsdoc from "swagger-jsdoc";
 // import swaggerDocument from "./config/swagger.json";
 
@@ -36,7 +34,6 @@ app.use("/api/v1/user", userRouter);
 app.use("/api/v1/category", categoryRouter);
 app.use("/api/v1/producer", producerRouter);
 app.use("/api/v1/cart", cartRouter);
-app.use("/api/v1/comment", commentRouter);
 app.use("/api/v1/config/paypal", (req, res) => {
   res.send(process.env.PAYPAL_CLIENT_ID);
 });
